# evan-hutchins-long-document-qa

./: .gitignore  README.md  dbqa.ipynb
attention_viewer/: HUGGING_FACE_SETUP.md  doc_loader.py  light_attention_viewer.html  main.py  pyproject.toml  test_pytorch.py
attention_viewer/attention_visual/: light_attention_viewer.html
docs/: first_task.md
local_llm/: README.md  long_context.py  requirements.txt  test_experiment.py
